test/sema/typeck/trait/impl-method-where-clause-self-bound.out
error: missing bound `Derived` on type parameter `Self`.
--> impl-method-where-clause-self-bound.dora:10:5
 | 
 | impl Base for MyClass {
 |     fn test() {}
       ~~~~~~~~~~~~
 | }
 | 
1 error found.
