test/sema/typeck/trait/impl-method-where-clause-self-bound.dora
trait Derived {}

trait Base {
    fn test() where Self: Derived;
}

class MyClass

impl Base for MyClass {
    fn test() {}
}
